--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>scrubbing</title>
     <script src="./script.js"></script>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div class="container">
-      <div class="video-container">
-        <video id="video" muted playsinline loop preload="auto">
-          <source src="single.mp4" type="video/mp4" />
-        </video>
+      <div id="identity-container">
+        <!-- <img src="./jpegs/single_100.jpg" alt="" /> -->
       </div>
     </div>
   </body>
