feat: better scroll with text

--- a/index.html
+++ b/index.html
@@ -9,10 +9,49 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div class="container">
-      <div id="identity-container">
+    <div id="identity-container">
+      <div id="identity">
         <!-- <img src="./jpegs/single_100.jpg" alt="" /> -->
       </div>
     </div>
+    <main id="page">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent id sem
+        vel ligula tempor lacinia vel quis nisl. Aenean posuere elementum
+        pretium. Aenean sit amet mauris sit amet odio fermentum vestibulum.
+        Donec imperdiet iaculis ex, eu rutrum sapien feugiat et. Sed placerat
+        porttitor eros sit amet varius. Cras semper orci sed convallis interdum.
+        Duis pretium arcu quis vestibulum fringilla. Proin nec nisl non urna
+        euismod maximus. Nunc at mi molestie, iaculis enim id, gravida ligula.
+        Integer eu posuere massa.
+      </p>
+      <p>
+        Proin porta eu magna sed efficitur. Donec luctus tortor vel libero
+        dignissim, sed laoreet ex tincidunt. Etiam id pellentesque mauris, sit
+        amet auctor urna. Sed facilisis turpis quis sagittis lobortis. Praesent
+        dictum quis augue vestibulum efficitur. Fusce tellus enim, lacinia in
+        est a, posuere viverra ante. Integer semper elit sit amet velit
+        imperdiet pretium. Praesent ac lorem lorem. Praesent justo augue,
+        lacinia a facilisis vitae, fermentum ac tortor. Nam eu enim nec purus
+        faucibus rutrum.
+      </p>
+      <p>
+        Quisque vel felis at turpis vulputate mollis. Suspendisse sed ante
+        semper, cursus enim quis, porttitor tortor. In efficitur maximus tempus.
+        Nunc eget mollis lacus, nec lobortis nunc. Phasellus sodales felis
+        massa, non consectetur turpis blandit at. Ut venenatis nisl id lorem
+        efficitur, eu ornare nisl pharetra.
+      </p>
+      <p>
+        Praesent rutrum rutrum magna, sit amet luctus ligula lobortis in.
+        Maecenas vel neque dictum, fermentum nisl blandit, lacinia sapien. In
+        fringilla diam id arcu venenatis, at aliquet tellus feugiat. Nam in
+        elementum lorem. Cras feugiat ante erat, nec venenatis lectus eleifend
+        vitae. Suspendisse in pharetra nisi, tincidunt fringilla ligula.
+        Suspendisse elementum eleifend imperdiet. Aliquam nisi eros, venenatis
+        et quam non, porttitor scelerisque ex. Curabitur mauris arcu, ultrices
+        eget vestibulum in, accumsan ut turpis.
+      </p>
+    </main>
   </body>
 </html>
